syntax = "proto3";

package metricagent;

option go_package = "github.com/horseinthesky/metricsagent/internal/pb";

message MetricInfo {
  string id = 1;
  string mtype = 2;
}

message Metric {
  string id = 1;
  string mtype = 2;
  sint64 delta = 3;
  double value = 4;
  string hash = 5;
}
